--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sirui Zhang: Personal site and portfolio</title>
 </head>
 <body>
     <h1>Sirui Zhang</h1>
-<p>Hello I'm a Seinor at UCSD and this is my last quarter</p>
+<p>Hello I'm a Seinor at UCSD and this is my last quarter.</p>
+<img
+src="images/image.png" 
+alt="And this is me and my friend's cat"
+>
 </body>
 </html>
