submit button fix

--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
     <title>Projects</title>
 </head>
 <body>
-    <h1>PAGE_TITLE</h1>
+    <h1>Projects</h1>
 
     <nav>
         <a href="../index.html">Home</a> |
