--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Sirui Zhang: Personal site and portfolio</title>
 </head>
 <body>
+    <nav>
+        <a href="../index.html">Home</a> |
+        <a href="index.html">Projects</a> |
+        <a href="../contact/index.html">Contact</a> |
+        <a href="../resume/index.html">Resume</a> |
+        <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
+      </nav>
     <h1>Sirui Zhang</h1>
 <p>Hello I'm a Seinor at UCSD and this is my last quarter.</p>
 <img
