--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav>
-        <a href="../index.html">Home</a> |
-        <a href="index.html">Projects</a> |
-        <a href="../contact/index.html">Contact</a> |
-        <a href="../resume/index.html">Resume</a> |
+        <a href="../dsc106_lab1/index.html">Home</a> |
+        <a href="/dsc106_lab1/index.html">Projects</a> |
+        <a href="../dsc106_lab1/contact/index.html">Contact</a> |
+        <a href="../dsc106_lab1/resume/index.html">Resume</a> |
         <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
       </nav>
     <h1>Sirui Zhang</h1>
