--- a/projects/index.html
+++ b/projects/index.html
@@ -9,10 +9,10 @@
     <h1>Projects</h1>
 
     <nav>
-        <a href="../index.html">Home</a> |
-        <a href="index.html">Projects</a> |
-        <a href="../contact/index.html">Contact</a> |
-        <a href="../resume/index.html">Resume</a> |
+        <a href="../dsc106_lab1/index.html">Home</a> |
+        <a href="/dsc106_lab1/index.html">Projects</a> |
+        <a href="../dsc106_lab1/contact/index.html">Contact</a> |
+        <a href="../dsc106_lab1/resume/index.html">Resume</a> |
         <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
       </nav>
 </body>
