--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
 
     <nav>
       <a href="https://therealasrz.github.io/dsc106_lab1/index.html">Home</a> |
-      <a href="https://therealasrz.github.io/dsc106_lab1/index.html">Projects</a> |
+      <a href="https://therealasrz.github.io/dsc106_lab1/projects/index.html">Projects</a> |
       <a href="https://therealasrz.github.io/dsc106_lab1/contact/index.html">Contact</a> |
       <a href="https://therealasrz.github.io/dsc106_lab1/resume/index.html">Resume</a> |
       <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
