--- a/resume/index.html
+++ b/resume/index.html
@@ -10,12 +10,12 @@
     <h1>Contact</h1>
 
     <nav>
-        <a href="https://therealasrz.github.io/dsc106_lab1/index.html">Home</a> |
-        <a href="https://therealasrz.github.io/dsc106_lab1/index.html">Projects</a> |
-        <a href="https://therealasrz.github.io/dsc106_lab1/contact/index.html">Contact</a> |
-        <a href="https://therealasrz.github.io/dsc106_lab1/resume/index.html">Resume</a> |
-        <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
-      </nav>
+      <a href="https://therealasrz.github.io/dsc106_lab1/index.html">Home</a> |
+      <a href="https://therealasrz.github.io/dsc106_lab1/projects/index.html">Projects</a> |
+      <a href="https://therealasrz.github.io/dsc106_lab1/contact/index.html">Contact</a> |
+      <a href="https://therealasrz.github.io/dsc106_lab1/resume/index.html">Resume</a> |
+      <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
+    </nav>
 
       <section id="education">
         <header>
