--- a/contact/index.html
+++ b/contact/index.html
@@ -10,10 +10,10 @@
     <h1>Contact</h1>
 
     <nav>
-      <a href="https://therealasrz.github.io/dsc106_lab1/index.html">Home</a> |
-      <a href="https://therealasrz.github.io/dsc106_lab1/projects/index.html">Projects</a> |
-      <a href="https://therealasrz.github.io/dsc106_lab1/contact/index.html">Contact</a> |
-      <a href="https://therealasrz.github.io/dsc106_lab1/resume/index.html">Resume</a> |
+      <a href="../index.html">Home</a> |
+      <a href="../projects/index.html">Projects</a> |
+      <a href="../contact/index.html">Contact</a> |
+      <a href="../resume/index.html">Resume</a> |
       <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
     </nav>
 
@@ -42,5 +42,6 @@
 
     <button>Submit</button>
   </form>
+  <script type="module" src="../global.js"></script>
 </body>
 </html>
