--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <nav>
-        <a href="https://therealasrz.github.io/dsc106_lab1/index.html">Home</a> |
-        <a href="https://therealasrz.github.io/dsc106_lab1/projects/index.html">Projects</a> |
-        <a href="https://therealasrz.github.io/dsc106_lab1/contact/index.html">Contact</a> |
-        <a href="https://therealasrz.github.io/dsc106_lab1/resume/index.html">Resume</a> |
+        <a href="../index.html">Home</a> |
+        <a href="../projects/index.html">Projects</a> |
+        <a href="../contact/index.html">Contact</a> |
+        <a href="../resume/index.html">Resume</a> |
         <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
       </nav>
     <h1>Sirui Zhang</h1>
 <p>Hello I'm a Seinor at UCSD and this is my last quarter.</p>
-<img
+    <img
 src="images/image.png" 
 alt="And this is me and my friend's cat"
 >
+<script type="module" src="../global.js"></script>
 </body>
 </html>
