--- a/resume/index.html
+++ b/resume/index.html
@@ -10,10 +10,10 @@
     <h1>Contact</h1>
 
     <nav>
-      <a href="https://therealasrz.github.io/dsc106_lab1/index.html">Home</a> |
-      <a href="https://therealasrz.github.io/dsc106_lab1/projects/index.html">Projects</a> |
-      <a href="https://therealasrz.github.io/dsc106_lab1/contact/index.html">Contact</a> |
-      <a href="https://therealasrz.github.io/dsc106_lab1/resume/index.html">Resume</a> |
+      <a href="../index.html">Home</a> |
+      <a href="../projects/index.html">Projects</a> |
+      <a href="../contact/index.html">Contact</a> |
+      <a href="../resume/index.html">Resume</a> |
       <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
     </nav>
 
@@ -59,6 +59,6 @@
           <li>Tools: Git/GitHub, Docker, Adobe Audition</li>
         </ul>
       </section>
-    
+    <script type="module" src="../global.js"></script> 
 </body>
 </html>
