--- a/projects/index.html
+++ b/projects/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav>
-        <a href="https://therealasrz.github.io/dsc106_lab1/index.html">Home</a> |
-        <a href="https://therealasrz.github.io/dsc106_lab1/projects/index.html">Projects</a> |
-        <a href="https://therealasrz.github.io/dsc106_lab1/contact/index.html">Contact</a> |
-        <a href="https://therealasrz.github.io/dsc106_lab1/resume/index.html">Resume</a> |
+        <a href="../index.html">Home</a> |
+        <a href="../projects/index.html">Projects</a> |
+        <a href="../contact/index.html">Contact</a> |
+        <a href="../resume/index.html">Resume</a> |
         <a href="https://github.com/therealasrz" target="_blank">GitHub</a>
       </nav>
 
@@ -79,6 +79,6 @@
         </article>
     </div>
 
-    
+    <script type="module" src="../global.js"></script> 
 </body>
 </html>
