--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 src="images/image.png" 
 alt="And this is me and my friend's cat"
 >
-<script type="module" src="../global.js"></script>
+<script type="module" src="global.js"></script>
 </body>
 </html>
