--- a/contact/index.html
+++ b/contact/index.html
@@ -7,33 +7,24 @@
     <title>Contact</title>
 </head>
 <body>
-    <h1>Contact</h1>
+  <h1>Contact</h1>
 
-    <form 
-    action="mailto:foo@example.com" 
-    method="POST" 
-    enctype="text/plain"
-  >
-    <label>
-      Your email:
-      <input name="email" type="email" required>
-    </label>
-    <br>
-
+  <form action="mailto:sirui.zhang0129@gmail.com" method="GET">
     <label>
       Subject:
-      <input name="subject">
+      <input name="subject" required />
     </label>
-    <br>
+    <br />
 
     <label>
       Message:
-      <textarea name="body" rows="6"></textarea>
+      <textarea name="body" rows="6" required></textarea>
     </label>
-    <br>
+    <br />
 
-    <button>Submit</button>
+    <button type="submit">Send</button>
   </form>
+
   <script type="module" src="../global.js"></script>
 </body>
 </html>
