--- a/projects/index.html
+++ b/projects/index.html
@@ -7,70 +7,11 @@
     <title>Projects</title>
 </head>
 <body>
-    <h1>Projects</h1>
-    <div class="projects">
-        <article>
-            <h2>Lorem ipsum dolor sit.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro eius magnam facilis doloribus esse! Eum cum alias placeat reiciendis saepe quidem, totam quam beatae animi enim, laudantium voluptate harum fugit.</p>
-        </article>
-        <article>
-            <h2>Iure minima expedita necessitatibus.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Ipsum aliquam aspernatur optio deserunt porro, perferendis quo voluptatum error sed explicabo maxime, fugit labore et officiis cumque animi reiciendis laboriosam fugiat! Reiciendis deserunt cum laboriosam expedita aliquid modi tempora.</p>
-        </article>
-        <article>
-            <h2>Sit facilis libero laudantium?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Veniam dolor sit doloribus ad adipisci quod? Sint assumenda dolore enim incidunt quod provident est nisi fuga officiis porro iure, nulla recusandae eius pariatur soluta. Iste recusandae quaerat deserunt facilis.</p>
-        </article>
-        <article>
-            <h2>Explicabo, beatae. Sequi, reprehenderit!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Ipsa, nemo aspernatur. Reiciendis impedit natus, omnis non commodi fuga iusto facilis, at tempora sunt, doloremque quis. Explicabo aliquid harum possimus autem ab deleniti, similique velit! Libero illum impedit tempore.</p>
-        </article>
-        <article>
-            <h2>Dolorum placeat ratione tenetur?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Repellendus beatae harum sequi quis debitis rem saepe officiis! Atque, in. Atque alias dignissimos eveniet sequi? Deserunt totam atque dicta! Eum iste nostrum quaerat incidunt nulla doloribus consequatur nesciunt assumenda.</p>
-        </article>
-        <article>
-            <h2>Amet animi odio debitis.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Debitis, sed facere nam eaque molestias odio dolores saepe vitae architecto, sint sequi facilis, nulla vero? Repellat assumenda laudantium ipsam ad numquam. Non quam, quia possimus iure delectus a tempore!</p>
-        </article>
-        <article>
-            <h2>Fugit doloremque necessitatibus ipsum?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Fugit voluptates eum, ducimus voluptatibus provident sed rem eius accusamus rerum illo! Mollitia ratione facilis corrupti necessitatibus impedit praesentium incidunt eum suscipit placeat provident sunt, nam expedita dolore molestiae distinctio?</p>
-        </article>
-        <article>
-            <h2>Fugiat animi nostrum alias?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>At, id accusantium! Voluptate eos quod velit? Possimus modi at, exercitationem veritatis minus ea, tenetur nulla porro nesciunt laborum deserunt beatae vitae debitis sapiente, sint sit aperiam libero ipsa! Ad.</p>
-        </article>
-        <article>
-            <h2>Voluptate atque sint fugit!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Atque ex repellendus, nam quo doloremque alias modi nisi sit maxime eaque at laudantium accusantium in rerum dolorum quod quas perspiciatis sed labore veritatis minima! Laborum aperiam officia suscipit hic.</p>
-        </article>
-        <article>
-            <h2>Alias voluptates deleniti id?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Odio obcaecati consectetur hic quasi illum cum vitae animi similique architecto assumenda, repellendus mollitia eos? Pariatur explicabo commodi officia. Exercitationem perspiciatis nulla, blanditiis molestias iste tempora. Sed, velit qui. Molestiae.</p>
-        </article>
-        <article>
-            <h2>Tenetur quidem doloribus eum!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Delectus, ad quod? Quaerat ipsa natus eos quidem non labore error quis animi, qui reprehenderit rerum aliquid hic? Expedita doloribus facere, rerum earum cumque ab libero laudantium alias illum. Cum.</p>
-        </article>
-        <article>
-            <h2>Aut modi est consectetur!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Soluta ducimus officia porro vitae magnam officiis possimus ullam incidunt nostrum tempore dolores aperiam assumenda quidem autem, facere amet, voluptate expedita eligendi eum. Deleniti asperiores iusto quo, id eos fugiat!</p>
-        </article>
-    </div>
+    <h1 class="projects-title">Projects</h1>
+
+    <div class="projects"></div>
 
     <script type="module" src="../global.js"></script> 
+    <script type="module" src="projects.js"></script>
 </body>
 </html>
