--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ Over the past few years, I’ve explored the intersection of technology, behavio
 src="images/image.png" 
 alt="And this is me and my friend's cat"
 >
+<h2>GitHub Stats</h2>
+<div id="profile-stats"></div>
+
 <script type="module" src="global.js"></script>
+<script type="module" src="index.js"></script>
 </body>
 </html>
