--- a/projects/index.html
+++ b/projects/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <h1 class="projects-title">Projects</h1>
+    <div class="chart-container">
+        <svg id="projects-pie-plot" viewBox="-50 -50 100 100"></svg>
+        <ul class="legend"></ul>
+    </div>
+    
+    <input
+      class="searchBar"
+      type="search"
+      aria-label="Search projects"
+      placeholder="🔍 Search projects…"
+    />
 
     <div class="projects"></div>
 
