--- a/meta/index.html
+++ b/meta/index.html
@@ -10,23 +10,19 @@
 <body>
     <h1>Meta</h1>
     <h2>Summary</h2>
-    
     <div style="display: flex; align-items: baseline; margin-bottom: 20px;">
-  <label style="flex: 1;">
-    Show commits until:
-    <input type="range" id="commit-progress" min="0" max="100" value="100">
-  </label>
+  <label for="commit-progress">Show commits up to:</label>
+<input
+  type="range"
+  id="commit-progress"
+  min="0"
+  max="100"
+  value="100"
+  step="1"
+/>
   <time id="commit-time-display" style="margin-left: auto;"></time>
+  
 </div>
-
-<div class="time-control">
-  <label>
-    Show commits until:
-    <input type="range" id="commit-progress" min="0" max="100" value="100">
-  </label>
-  <time id="commit-time-display"></time>
-</div>
-
     <div id="stats"></div>
 
     <h2>Commits by time of day</h2>
